--- a/index.html
+++ b/index.html
@@ -124,6 +124,30 @@
                 name: '601002 普亿实业',
                 peak: 8.69,
                 low: 5.31,
+            }, {
+                name: '002861',
+                peak: 30.66,
+                low: 18.79,
+            }, {
+                name: '002655',
+                peak: 11.10,
+                low: 5.85,
+            }, {
+                name: '002241',
+                peak: 11.49,
+                low: 6.56,
+            }, {
+                name: '002045',
+                peak: 7.40,
+                low: 4.25,
+            }, {
+                name: '000557',
+                peak: 5.36,
+                low: 3.35,
+            }, {
+                name: '000002',
+                peak: 33.60,
+                low: 23.33,
             }
         ]
 
